# rrg-new

./: .env  .gitignore  Dockerfile  README.md  celery_beat.py  celery_worker.py  celerybeat-schedule  check_cnx500.py  check_data.py  check_db.py  check_duckdb.py  check_duckdb_tables.py  check_schema.py  config.py  docker-compose.yml  init_and_start.py  init_db.py  inspect_duckdb.py  load_all_data.py  load_historical_data.py  main.py  main2.py  pyproject.toml  requirements.txt  run.py  start_celery.sh  start_server.py  start_services.sh  test_data_load.py  test_data_loaders.py  test_db.py  test_rrg.py  test_rrg_data.py  test_rrg_pipeline.py  test_rrg_request.py
prometheus/: docker-compose.yml  prometheus.yml
src/: celery_app.py  config.py  main.py  test_clickhouse.py  test_metadata_loading.py
src/auth/: jwt.py
src/db/: clickhouse.py
src/modules/db/: __init__.py  config.py  data_manager.py  db_common.py  eod_data_loader.py  init_db.py  metadata_store.py  minute_data_loader.py  reference_data_loader.py  slug_utils.py
src/modules/rrg/: change_percentage.py  debug_data.py  eod_data_loader.py  generate.py  init.py  inspect_ch_mv_stocks.py  inspect_metadata.py  metadata_store.py  reference_data_loader.py  router.py  schemas.py  service.py  service.py.new  sync_worker.py  tasks.py  test_generate.py  test_metadata.py  test_print.py  test_rrg_csv.py  test_rrg_end_to_end.py  test_rrg_request.py  time_utils.py
src/modules/rrg/exports/: __main__.py  rrgcsv.conf  rrgcsv_new
src/tasks/: data_tasks.py
src/utils/: clickhouse.py  clickhouse_pool.py  csv_generation.py  duck_pool.py  logger.py  metrics.py
src/utils/manager/: cache_manager.py
tests/: compare_debug_responses.py  compare_symbols.py  test_duck_pool.py
(+17 files in other folders)
