[project]
name = "rrg"
version = "0.1.0"
description = "indiecharts RRG"
authors = [
    { name = "levii", email = "your@email.com" }
]
dependencies = [
    "amqp==5.3.1",
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "asyncpg==0.30.0",
    "billiard==4.2.1",
    "boto3==1.37.30",
    "botocore==1.37.30",
    "celery==5.5.1",
    "certifi==2025.1.31",
    "cffi==1.17.1",
    "charset-normalizer==3.4.1",
    "click==8.1.8",
    "click-didyoumean==0.3.1",
    "click-plugins==1.1.1",
    "click-repl==0.3.0",
    "clickhouse-connect==0.8.16",
    "connectorx==0.3.3",
    "cryptography==44.0.2",
    "cython>=3.0.12",
    "dotenv==0.9.9",
    "duckdb==1.2.2",
    "ecdsa==0.19.1",
    "fastapi==0.115.12",
    "h11==0.14.0",
    "idna==3.10",
    "jmespath==1.0.1",
    "jwt==1.3.1",
    "kombu==5.5.2",
    "lz4==4.4.4",
    "numpy==2.2.4",
    "paho-mqtt==2.1.0",
    "prompt-toolkit==3.0.50",
    "psycopg2-binary==2.9.10",
    "pyarrow==19.0.1",
    "pyasn1==0.4.8",
    "pycparser==2.22",
    "pydantic==2.11.3",
    "pydantic-core==2.33.1",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.0",
    "python-jose==3.4.0",
    "python-multipart==0.0.20",
    "pytz==2025.2",
    "redis==5.2.1",
    "requests==2.32.3",
    "rsa==4.9",
    "s3transfer==0.11.4",
    "schedule==1.2.2",
    "six==1.17.0",
    "sniffio==1.3.1",
    "starlette==0.46.1",
    "typing-inspection==0.4.0",
    "typing-extensions==4.13.1",
    "tzdata==2025.2",
    "urllib3==2.3.0",
    "uvicorn==0.34.0",
    "vine==5.1.0",
    "wcwidth==0.2.13",
    "zstandard==0.23.0",
    "polars>=1.27.1",
    "prometheus-client>=0.21.1",
    "pyjwt>=2.10.1",
]

[tool.uv]
